# scaff

./: .gitignore  LICENSE  README.md  config.example.yaml  scaff.cabal
example/: README.md  files
example/licenses/: BSD3
src/: Main.hs
src/Scaff/: Config.hs  Context.hs  Ginger.hs  HTTP.hs  Mapping.hs  TemplateRepo.hs
templates/: templates.list
templates/haskell/vanilla/: files  project.cabal  questions
templates/haskell/vanilla/licenses/: AllRightsReserved
templates/haskell/vanilla/src/: Main.hs
