name:           scaff
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tdammers/scaff#README>
homepage:       https://github.com/tdammers/scaff#README
bug-reports:    https://github.com/tdammers/scaff/issues
author:         Tobias Dammers
maintainer:     tdammers@gmail.com
copyright:      2018 Tobias Dammers
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/tdammers/scaff

executable scaff
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , aeson
               , bytestring
               , casing
               , directory
               , filepath
               , ginger
               , megaparsec
               , mtl
               , text
               , unordered-containers
               , yaml
  other-modules: Scaff.Mapping
               , Scaff.Config
               , Scaff.Context
               , Scaff.Ginger
               , Scaff.TemplateRepo
  default-language: Haskell2010
