name:           {{project}}
version:        0.1.0.0
description:    {{description}}
homepage:       {{homepage}}
bug-reports:    
author:         {{author.name}}
maintainer:     {{author.email}}
copyright:      {{author['copyright-year']}} {{author.name}}
license:        {{license|default('BSD3')}}
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

{% if author.github %}
source-repository head
  type: git
  location: https://github.com/{{author.github}}/{{project}}
{% endif %}

executable {{project}}
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
{% for extraDep in extraDeps %}
               , {{ extraDep }}
{% endfor %}
  other-modules:
  default-language: Haskell2010
